<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.naver.maps.map.MapView
        android:id="@+id/naver_mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        android:background="@android:color/white"
        app:queryHint="검색어를 입력하세요."
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floatingmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:fab_addButtonSize="mini"
        app:fab_addButtonColorNormal="@color/pink"
        app:fab_addButtonColorPressed="@color/pink_pressed"
        app:fab_labelsPosition="left"
        app:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/helpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_colorNormal="@color/pink"
            app:fab_title="@string/help_title"
            app:fab_colorPressed="@color/pink_pressed"
            app:fab_icon="@drawable/baseline_help_outline_black_24"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/myLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_colorNormal="@color/pink"
            app:fab_title="@string/mylocation_title"
            app:fab_colorPressed="@color/pink_pressed"
            app:fab_icon="@drawable/baseline_gps_fixed_black_24"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/lastLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/pink"
            app:fab_size="mini"
            app:fab_title="@string/lastlocation_title"
            app:fab_colorPressed="@color/pink_pressed"
            app:fab_icon="@drawable/baseline_gps_fixed_black_24"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</FrameLayout>