<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/dialog_native_ad_title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

<!--        <CheckBox-->
<!--            android:id="@+id/start_muted_checkbox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:checked="true"-->
<!--            android:text="@string/dialog_native_ad_mute" />-->

        <FrameLayout
            android:id="@+id/adviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />

<!--        <TextView-->
<!--            android:id="@+id/videostatus_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:text="Video status: "-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appFinshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dialog_native_ad_btn_finish"
                android:textColor="@android:color/white"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/dialogCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dialog_native_ad_btn_cancel"
                android:textColor="@android:color/white"
                android:background="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>